--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.0.5/dist/MarkerCluster.Default.css"/>
 
+ <link rel='stylesheet' href='style.css'>
+
  <!-- Make sure you put this AFTER Leaflet's CSS -->
  <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
 
