--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css"/>
+ <link rel='stylesheet' href='style.css'>
 
  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.0.5/dist/MarkerCluster.css"/>
 
